bzr-svn 1.0.2					  UNRELEASED

 BUG FIXES
  
  * Push tags when pushing to a new repository. (Jelmer Vernooij, #459444)

  * Cope with non-ascii URLs.
   * During connect. (#456548, Jelmer Vernooij)
   * During repository creation. (#458008, Jelmer Vernooij)

  * Cope with non-ascii characters in svn author names. (#460392, 
    Jelmer Vernooij)

  * Fix expected URL in Repository.__repr__ tests that sometimes causes 
    troubles if the temporary directory contains special characters. 
	(John Szakmeister, #460899)

  * Cope with pushing new non-mainline revisions.  (Jelmer Vernooij, #416328)

  * Support probing for Subversion repositories over existing HTTP transports
    using pycurl. (Jelmer Vernooij, #424626)

  * Show Subversion revno and uuid in "bzr version-info". (Jelmer Vernooij,
    #490771)

 PERFORMANCE

  * When updating the log cache, fetch from newest to oldest revision as 
    the Subversion database backends are optimized for this. 
	(John Szakmeister)

  * Fetch history information newest revision to oldest revision because of 
    speed.  (John Szakmeister, #453789)


bzr-svn	1.0.1					  2009-10-20

 BUG FIXES

  * Mark as compatible with Bazaar 2.1. (Jelmer Vernooij)

  * Only use tdb if Tdb.get is there. (Jelmer Vernooij, #440211)

  * Cope with xdg_cache_home sometimes containing unicode. (Jelmer Vernooij)

  * Provide right infrastructure for bzrlib.tests.per_foreign_vcs. 
    (Jelmer Vernooij)

bzr-svn 1.0.0					  2009-09-24

 PERFORMANCE

  * Avoid re-fetching the basis inventory during fetch. (Jelmer Vernooij)

 BUG FIXES

  * Generate valid inventory delta's when the root of a tree is replaced with an older 
    copy of itself. (Jelmer Vernooij)

  * Hide backtrace for EAI_NONAME errors. (John Szakmeister)

  * Allow commits without an author. (Jelmer Vernooij, #434230)

  * Cope with extra arguments to Repository._check(). (Jelmer Vernooij)

  * Properly encode symlink targets when pushing. (Jelmer Vernooij)
