@@ -1,6 +1,9 @@
 bzr-svn 1.0.2					  UNRELEASED
 
  BUG FIXES
+
+  * Cope with Google code Subversion repositories a bit better in the 
+    layout detection code. (Jelmer Vernooij)
   
   * Push tags when pushing to a new repository. (Jelmer Vernooij, #459444)
 
